fixed collapsed menu state

--- a/vital-store/css/bootstrap-fix.css
+++ b/vital-store/css/bootstrap-fix.css
@@ -36,6 +36,12 @@ tr.collapsing {
     font-size: 18px;
 }
 
+/*
+.dockbar .menu-btn {
+	background-color: #e9e9e9;
+	border-left: none;
+}
+*/
 
 /* Extra small devices (phones, less than 768px) */
 /* No media query since this is the default in Bootstrap */
